--- a/matching-system/src/Frontend/components/pages/Login page/Login.css
+++ b/matching-system/src/Frontend/components/pages/Login page/Login.css
@@ -1,8 +1,8 @@
 .login-form{
-    width: 360px;
+    width: 370px;
     background: #cde0e2;
-    height: 500px;
-    padding: 80px 40px;
+    height: 450px;
+    padding: 70px 70px;
     border-radius: 10px;
     position: absolute;
     left: 50%;
