--- a/matching-system/src/Frontend/components/pages/Register page/Register.css
+++ b/matching-system/src/Frontend/components/pages/Register page/Register.css
@@ -1,17 +1,17 @@
-.login-form{
-    width: 360px;
+.register-form{
+    width: 380px;
     background: #cde0e2;
-    height: 500px;
-    padding: 80px 40px;
+    height: 490px;
+    padding: 70px 70px;
     border-radius: 10px;
     position: absolute;
     left: 50%;
-    top: 55%;
+    top: 58%;
     transform: translate(-50%,-50%);
   }
-  .login-form h1{
+  .register-form h1{
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 35px;
     color: #201e3b;
   }
   .acc-type{
@@ -34,7 +34,7 @@
     padding: 0 5px;
     height: 40px;
   }
-  .logbtn{
+  .registerbtn{
     display: block;
     width: 100%;
     height: 50px;
@@ -46,7 +46,7 @@
     cursor: pointer;
     transition: .5s;
   }
-  .logbtn:hover{
+  .registerbtn:hover{
     background-position: right;
   }
   .bottom-text{
